[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acreplay"
version = "2026.1.2"
authors = [
    {name = "Andreas Kloeckner", email = "inform@tiker.net"},
]
description = "Parsing and analysis for Assetto Corsa replays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[project.scripts]
ac-replay-plot = "acreplay.plot:main"
ac-replay-probe = "acreplay.probe:main"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pycodestyle
    "TC",
    "SIM",
]
extend-ignore = [
    "C90",  # McCabe complexity
    "E221", # multiple spaces before operator
    "E226", # missing whitespace around arithmetic operator
    "E402", # module-level import not at top of file
    "UP031", # use f-strings instead of %
    "UP032", # use f-strings instead of .format
    "RUF001", # ambiguous character
    "RUF002", # ambiguous character
    "RUF003", # ambiguous character
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.basedpyright]
reportImplicitStringConcatenation = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"
reportUnreachable = "hint"

exclude = [
    "doc",
    ".conda-root",
    "build",
    ".env",
]

# This reports even cycles that are qualified by 'if TYPE_CHECKING'. Not what
# we care about at this moment.
# https://github.com/microsoft/pyright/issues/746
reportImportCycles = "none"
pythonVersion = "3.10"
pythonPlatform = "All"
